Fixed some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,78 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.menu {
+  text-align: left;
+  padding-top: 10pt;
+  padding-left: 10pt;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.settingsButton {
+  font-size: 26pt;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.settingsPanel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 10pt;
+  background-color: #6f00ff;
   color: white;
+  width: 180pt;
+  height: 100%;
+  text-align: right;
+  border-right: solid black 3pt;
+  z-index: 2;
 }
 
-.App-link {
-  color: #61dafb;
+.settingsPanel label {
+  padding-right: 10pt;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.mainContainer {
+  display: inline-block;
+  margin-top: 10pt;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.7);
+  opacity: 50%;
+}
+
+.submitButton {
+  display: inline-block;
+  background-color: black;
+  padding: 14pt 40pt;
+  color: white;
+  cursor: pointer;
+  margin-top: 10pt;
+}
+
+.submitButton:hover {
+  background-color: #001eff;
+}
+
+.statusMessage {
+  margin-top: 10pt;
+}
+
+@media only screen and (max-width: 800px) {
+  .settingsButton {
+    font-size: 20pt;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media only screen and (max-width: 600px) {
+  .settingsButton {
+    font-size: 16pt;
   }
 }
